--- a/webkit.css
+++ b/webkit.css
@@ -504,6 +504,18 @@ body.v6 #footer_nav .popup_block_new .popup_body, body.v6 .store_nav .popup_bloc
 	border-radius: 4px !important
 }
 
+.app_tag, .app_tag_control {
+	font-size: 0.9em !important
+}
+
+.app_tag_modal h2 {
+	font-size: 15px !important
+}
+
+.small {
+	font-size: 11px !important
+}
+
 .game_hover .hover_arrow_left, .game_hover .hover_arrow_right {
 	background: 0 0 !important;
 	border-radius: 4px !important
@@ -2658,6 +2670,10 @@ body.v6 .game_area_already_owned.page_content {
 	border-radius: 4px !important
 }
 
+.game_area_purchase_game_dropdown_selection {
+	font-size: 11px;
+}
+
 .highlight_selector {
 	background-image: none !important
 }
@@ -3118,8 +3134,20 @@ div.early_access_announcements .post .more {
 	border-radius: 4px !important
 }
 
-body.v6 #game_area_purchase h2.package_group, body.v6 .early_access_announcements h2, body.v6 .game_area_description h2, body.v6 .game_area_dlc_section h2, body.v6 .item_store_items_block h2, body.v6 .referring_curator_ctn h2, body.v6 .steam_curators_block h2, body.v6 .sys_req h2 {
-	margin-left: -40px !important
+.game_area_description {
+	font-size: 15px !important
+}
+
+.bb_tag {
+	font-size: 17px !important
+}
+
+.game_area_sys_req {
+	font-size: 13px !important
+}
+
+.game_area_sys_req ul li strong {
+	font-size: 13px !important
 }
 
 .referring_curator {
